# mcv-parser

./: .gitignore  README.md  main.py  mcv.py  pyproject.toml
.agents/skills/mcv-parser/: SKILL.md
.agents/skills/mcv-parser/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: dependency-or-config-update.md  feature-development.md  feature-implementation-main-mcv.md
.claude/homunculus/instincts/inherited/: mcv-parser-instincts.yaml
.codex/: AGENTS.md
DTO/: course.py  material.py
